# adk-lmstudio

./: .gitignore  README.md  medium_article.md  pyproject.toml
src/local_adk/: __init__.py  agent.py  config.py  exceptions.py  llm.py  logger.py  main.py  research_agents.py  server.py
src/local_adk/tools/: __init__.py  search_tools.py
src/local_adk/ui/: app.js  index.html  style.css
tests/: test_agent.py
