[project]
name = "local-adk"
version = "0.1.0"
description = "A local ADK for LM Studio and LiteLLM"
authors = [
    {name = "Ashish Kumar", email = "ashishkumarbhs@gmail.com"}
]
requires-python = ">=3.10,<4.0"
dependencies = [
    "litellm>=1.0.0",
    "python-dotenv>=1.0.0",
    "pydantic-settings>=2.0.0",
    "rich>=13.0.0",
    "google-adk (>=1.32.0,<2.0.0)",
    "uvicorn (>=0.46.0,<0.47.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "fastapi (>=0.100.0)",
    "beautifulsoup4 (>=4.14.3,<5.0.0)"
]

[tool.poetry]
packages = [{include = "local_adk", from = "src"}]

[tool.poetry.scripts]
local-adk = "local_adk.main:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio (>=1.3.0,<2.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
